# useriam_auth_executor_mgr

./: README.en.md  README.md  README_ZH.md  auth_executor_mgr.gni  bundle.json  coauth.gni  ohos.build
common/: BUILD.gn  bundle.json  ohos.build
common/adaptor/inc/: adaptor_algorithm.h  adaptor_file.h  adaptor_log.h  adaptor_memory.h  adaptor_time.h  file_operator.h
common/adaptor/src/: adaptor_algorithm.c  adaptor_file.c  adaptor_log.c  adaptor_memory.c  adaptor_time.c  file_operator.c
common/coauth/inc/: coauth.h  coauth_funcs.h  coauth_sign_centre.h  executor_message.h
common/coauth/src/: coauth.c  coauth_funcs.c  coauth_sign_centre.c  executor_message.c  pool.c
common/common/inc/: bitwise_operation.h  buffer.h  defines.h  linked_list.h  tlv_base.h  tlv_wrapper.h
common/common/src/: bitwise_operation.c  buffer.c  linked_list.c  tlv_base.c  tlv_wrapper.c
common/database/inc/: idm_common.h  idm_database.h  idm_file_manager.h
common/database/src/: idm_common.c  idm_database.c  idm_file_manager.c
common/hal_sdk/: coauth_interface.cpp  userauth_interface.cpp  useriam_common.cpp  useridm_interface.cpp
common/idm/inc/: idm_session.h  user_idm_funcs.h
common/idm/src/: idm_session.c  user_idm_funcs.c
common/interface/: coauth_interface.h  common_defines.h  userauth_interface.h  useriam_common.h  useridm_interface.h
common/key_mgr/inc/: token_key.h
common/key_mgr/src/: token_key.c
common/lock/inc/: lock.h
common/lock/src/: lock.c
common/pool/inc/: pool.h
common/pool/src/: pool.c
common/user_auth/inc/: auth_level.h  context_manager.h  user_auth_funcs.h  user_sign_centre.h
common/user_auth/src/: auth_level.c  context_manager.c  user_auth_funcs.c  user_sign_centre.c
frameworks/kitsimpl/include/: coauth_callback_proxy.h  coauth_callback_stub.h  coauth_proxy.h  executor_callback_proxy.h  executor_callback_stub.h  executor_messenger_proxy.h  executor_messenger_stub.h  i_coauth.h  icoauth_callback.h  iexecutor_callback.h  iexecutor_messenger.h  iquery_callback.h  iset_prop_callback.h  query_callback_proxy.h  query_callback_stub.h  set_prop_callback_proxy.h  set_prop_callback_stub.h
frameworks/kitsimpl/src/: auth_executor_registry.cpp  auth_info.cpp  co_auth.cpp  coauth.cpp  coauth_callback_proxy.cpp  coauth_callback_stub.cpp  coauth_proxy.cpp  executor_callback_proxy.cpp  executor_callback_stub.cpp  executor_messenger_proxy.cpp  executor_messenger_stub.cpp  query_callback_proxy.cpp  query_callback_stub.cpp  set_prop_callback_proxy.cpp  set_prop_callback_stub.cpp
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: auth_attributes.h  auth_executor.h  auth_executor_registry.h  auth_info.h  auth_message.h  co_auth.h  coauth_callback.h  coauth_info_define.h  executor_callback.h  executor_messenger.h  query_callback.h  set_prop_callback.h
interfaces/innerkits/src/: auth_attributes.cpp  auth_executor.cpp  auth_message.cpp
sa_profile/: 5203.xml  923.xml  931.xml  BUILD.gn  useriam.cfg  useriam.rc
services/: BUILD.gn
services/include/: auth_res_manager.h  auth_res_pool.h  call_monitor.h  coauth_manager.h  coauth_service.h  coauth_stub.h  coauth_thread_pool.h
services/src/: auth_res_manager.cpp  auth_res_pool.cpp  call_monitor.cpp  coauth_manager.cpp  coauth_service.cpp  coauth_stub.cpp  coauth_thread_pool.cpp  executor_messenger.cpp
test/: BUILD.gn
test/unittest/: BUILD.gn
test/unittest/include/: coauth_test.h
test/unittest/src/: coauth_test.cpp
utils/: BUILD.gn
utils/native/include/: coauth_errors.h  coauth_hilog_wrapper.h
