# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

coauth_native_part_name = "coauthmgr"

coauth_root_path = "//base/useriam/coauth/"

coauth_service_path = "${coauth_root_path}/services"

coauth_frameworks_path = "${coauth_root_path}/frameworks"

coauth_interfaces_path = "${coauth_root_path}/interfaces"

coauth_innerkits_path = "${coauth_interfaces_path}/innerkits"

coauth_utils_path = "${coauth_root_path}/utils"

