# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/auth_executor_mgr/auth_executor_mgr.gni")

config("coauth_private_config") {
  include_dirs = [
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/user_iam/auth_executor_mgr/frameworks/innerkitsimpl/distributeddatafwk/include",
    "${coauth_frameworks_path}/kitsimpl/include",
    "//base/user_iam/auth_executor_mgr/common/interface",
  ]
}

config("coauth_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("coauthservice") {
  sources = [
    "src/auth_res_manager.cpp",
    "src/auth_res_pool.cpp",
    "src/coauth_manager.cpp",
    "src/coauth_service.cpp",
    "src/coauth_stub.cpp",
    "src/coauth_thread_pool.cpp",
    "src/executor_messenger.cpp",
    "src/call_monitor.cpp",
  ]

  configs = [
    "${coauth_utils_path}:utils_config",
    ":coauth_private_config",
  ]

  public_configs = [ ":coauth_public_config" ]

  deps = [
    "${coauth_innerkits_path}:coauth_framework",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//base/user_iam/auth_executor_mgr/common:useriam_common_lib",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${coauth_native_part_name}"
}
