# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/coauth/coauth.gni")

config("coauth_private_config") {
  include_dirs = [
    "${coauth_service_path}/include",
    "//utils/system/safwk/napi/include",
    "${coauth_frameworks_path}/kitsimpl/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/include",
  ]
}

config("coauth_public_config") {
  include_dirs = [ "include",
  "${coauth_frameworks_path}/kitsimpl/include",
  ]
}

ohos_shared_library("coauth_framework") {
  sources = [
    "../../frameworks/kitsimpl/src/coauth_proxy.cpp",
    "../../frameworks/kitsimpl/src/coauth.cpp",
    "../../frameworks/kitsimpl/src/query_callback_proxy.cpp",
    "../../frameworks/kitsimpl/src/query_callback_stub.cpp",
    "../../frameworks/kitsimpl/src/executor_callback_stub.cpp",
    "../../frameworks/kitsimpl/src/executor_callback_proxy.cpp",
    "../../interfaces/innerkits/src/auth_attributes.cpp",
    "../../interfaces/innerkits/src/auth_message.cpp",
    "../../frameworks/kitsimpl/src/executor_messenger_proxy.cpp",
    "../../frameworks/kitsimpl/src/executor_messenger_stub.cpp",
    "../../frameworks/kitsimpl/src/auth_executor_registry.cpp",
    "../../interfaces/innerkits/src/auth_executor.cpp",
    "../../frameworks/kitsimpl/src/auth_info.cpp",
    "../../frameworks/kitsimpl/src/set_prop_callback_proxy.cpp",
    "../../frameworks/kitsimpl/src/set_prop_callback_stub.cpp",
    "../../frameworks/kitsimpl/src/coauth_callback_proxy.cpp",
    "../../frameworks/kitsimpl/src/coauth_callback_stub.cpp",
  ]

  configs = [
    "${coauth_utils_path}:utils_config",
    ":coauth_private_config"
  ]

  public_configs = [ ":coauth_public_config",
  "${coauth_utils_path}:utils_config" ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
   ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${coauth_native_part_name}"
}
