# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//base/useriam/coauth/coauth.gni")

module_output_path = "coauthmgr/coauth_UT_test"

ohos_unittest("coauth_UT_test") {

  module_out_path = module_output_path

  sources = [
    "//base/useriam/coauth/test/unittest/src/coauth_test.cpp",
  ]

  include_dirs = [
    "include",
    "//base/useriam/coauth/interfaces/innerkits/include",
    "${coauth_service_path}/include",
    "//utils/system/safwk/napi/include",
    "${coauth_frameworks_path}/kitsimpl/include",
    "${coauth_utils_path}/native/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/include",
  ]
  deps = [
    "${coauth_innerkits_path}:coauth_framework",
    "//utils/native/base:utils",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
   ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}