# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/auth_executor_mgr/auth_executor_mgr.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "auth_executor_mgr/coauth_UT_test"

ohos_unittest("coauth_UT_test") {
  module_out_path = module_output_path

  sources =
      [ "//base/user_iam/auth_executor_mgr/test/unittest/src/coauth_test.cpp" ]

  include_dirs = [
    "include",
    "//base/user_iam/auth_executor_mgr/interfaces/innerkits/include",
    "${coauth_service_path}/include",
    "${coauth_frameworks_path}/kitsimpl/include",
    "${coauth_utils_path}/native/include",
  ]
  deps = [
    "${coauth_innerkits_path}:coauth_framework",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]
}
